--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="./index.scss" rel="stylesheet"/>
-    <script src="index.ts" type="module"></script>
+    <script src="./index.ts" type="module"></script>
     <title>Chat</title>
 </head>
 <body>
