--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="./index.scss" rel="stylesheet" />
-    <script src="./index.ts" type="module"></script>
-    <title>Chat</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>Chat</title>
+</head>
+<body>
+<div id="app"></div>
+<script src="./main.ts" type="module"></script>
+</body>
 </html>
